parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOUBLEQUOTES
    EQUAL
    FALSE
    FLOAT
    NULL
    POW
    TRUE

Grammar

Rule 0     S' -> KotlinFile
Rule 1     KotlinFile -> ShebangLine packageHeader importList topLevelObject
Rule 2     ShebangLine -> HASH NOT ID
Rule 3     packageHeader -> PACKAGE ID
Rule 4     importList -> importList importHeader
Rule 5     importList -> importHeader
Rule 6     importHeader -> IMPORT ID
Rule 7     topLevelObject -> topLevelObject functionDeclaration
Rule 8     topLevelObject -> functionDeclaration
Rule 9     functionDeclaration -> FUN ID LPAREN params RPAREN block
Rule 10    functionDeclaration -> FUN ID LPAREN params RPAREN COLON type block
Rule 11    functionDeclaration -> FUN ID LPAREN RPAREN COLON type block
Rule 12    functionDeclaration -> FUN ID LPAREN RPAREN block
Rule 13    params -> ID COLON type
Rule 14    params -> ID COLON type COMMA params
Rule 15    type -> TYPE_INT
Rule 16    type -> TYPE_STRING
Rule 17    type -> TYPE_BOOLEAN
Rule 18    type -> TYPE_FLOAT
Rule 19    block -> LBRACE RBRACE
Rule 20    block -> LBRACE statements RBRACE
Rule 21    statements -> statements statement
Rule 22    statements -> statement
Rule 23    statement -> expression
Rule 24    statement -> variableDeclaration
Rule 25    statement -> variableAssignment
Rule 26    statement -> IF LPAREN expression RPAREN block elseStatement
Rule 27    statement -> IF LPAREN expression RPAREN block
Rule 28    elseStatement -> ELSE block
Rule 29    statement -> forLoop
Rule 30    statement -> whileLoop
Rule 31    statement -> returnStatement
Rule 32    expression -> disjunction
Rule 33    disjunction -> disjunction OR conjunction
Rule 34    disjunction -> conjunction
Rule 35    conjunction -> conjunction AND equality
Rule 36    conjunction -> equality
Rule 37    equality -> equality operadoresEquality comparation
Rule 38    equality -> comparation
Rule 39    operadoresEquality -> DIFFERENT
Rule 40    comparation -> comparation operadoresComparation inExpression
Rule 41    comparation -> inExpression
Rule 42    operadoresComparation -> LESS
Rule 43    operadoresComparation -> GREATER
Rule 44    operadoresComparation -> LESSEQ
Rule 45    operadoresComparation -> GREATEREQ
Rule 46    inExpression -> inExpression IN additive
Rule 47    inExpression -> additive
Rule 48    additive -> additive aditivos multiplicative
Rule 49    additive -> multiplicative
Rule 50    aditivos -> PLUS
Rule 51    aditivos -> MINUS
Rule 52    multiplicative -> multiplicative multiplicadores resto
Rule 53    multiplicative -> resto
Rule 54    multiplicadores -> TIMES
Rule 55    multiplicadores -> DIVIDE
Rule 56    resto -> ID
Rule 57    resto -> STRING
Rule 58    resto -> NUMBER
Rule 59    resto -> BOOLEAN
Rule 60    resto -> functionDeclaration
Rule 61    resto -> functionCall
Rule 62    variableDeclaration -> VAR ID COLON type ASSIGN expression
Rule 63    variableDeclaration -> VAR ID COLON type
Rule 64    variableAssignment -> ID ASSIGN expression
Rule 65    variableAssignment -> ID PLUSEQ expression
Rule 66    variableAssignment -> ID MINUSEQ expression
Rule 67    variableAssignment -> ID TIMESEQ expression
Rule 68    variableAssignment -> ID DIVIDEEQ expression
Rule 69    forLoop -> FOR LPAREN expression RPAREN block
Rule 70    whileLoop -> WHILE LPAREN expression RPAREN block
Rule 71    returnStatement -> RETURN expression
Rule 72    functionCall -> ID LPAREN listaParametros RPAREN
Rule 73    functionCall -> ID LPAREN RPAREN
Rule 74    listaParametros -> expression COMMA listaParametros
Rule 75    listaParametros -> expression

Terminals, with rules where they appear

AND                  : 35
ASSIGN               : 62 64
BOOLEAN              : 59
COLON                : 10 11 13 14 62 63
COMMA                : 14 74
DIFFERENT            : 39
DIVIDE               : 55
DIVIDEEQ             : 68
DOUBLEQUOTES         : 
ELSE                 : 28
EQUAL                : 
FALSE                : 
FLOAT                : 
FOR                  : 69
FUN                  : 9 10 11 12
GREATER              : 43
GREATEREQ            : 45
HASH                 : 2
ID                   : 2 3 6 9 10 11 12 13 14 56 62 63 64 65 66 67 68 72 73
IF                   : 26 27
IMPORT               : 6
IN                   : 46
LBRACE               : 19 20
LESS                 : 42
LESSEQ               : 44
LPAREN               : 9 10 11 12 26 27 69 70 72 73
MINUS                : 51
MINUSEQ              : 66
NOT                  : 2
NULL                 : 
NUMBER               : 58
OR                   : 33
PACKAGE              : 3
PLUS                 : 50
PLUSEQ               : 65
POW                  : 
RBRACE               : 19 20
RETURN               : 71
RPAREN               : 9 10 11 12 26 27 69 70 72 73
STRING               : 57
TIMES                : 54
TIMESEQ              : 67
TRUE                 : 
TYPE_BOOLEAN         : 17
TYPE_FLOAT           : 18
TYPE_INT             : 15
TYPE_STRING          : 16
VAR                  : 62 63
WHILE                : 70
error                : 

Nonterminals, with rules where they appear

KotlinFile           : 0
ShebangLine          : 1
additive             : 46 47 48
aditivos             : 48
block                : 9 10 11 12 26 27 28 69 70
comparation          : 37 38 40
conjunction          : 33 34 35
disjunction          : 32 33
elseStatement        : 26
equality             : 35 36 37
expression           : 23 26 27 62 64 65 66 67 68 69 70 71 74 75
forLoop              : 29
functionCall         : 61
functionDeclaration  : 7 8 60
importHeader         : 4 5
importList           : 1 4
inExpression         : 40 41 46
listaParametros      : 72 74
multiplicadores      : 52
multiplicative       : 48 49 52
operadoresComparation : 40
operadoresEquality   : 37
packageHeader        : 1
params               : 9 10 14
resto                : 52 53
returnStatement      : 31
statement            : 21 22
statements           : 20 21
topLevelObject       : 1 7
type                 : 10 11 13 14 62 63
variableAssignment   : 25
variableDeclaration  : 24
whileLoop            : 30

Parsing method: LALR

state 0

    (0) S' -> . KotlinFile
    (1) KotlinFile -> . ShebangLine packageHeader importList topLevelObject
    (2) ShebangLine -> . HASH NOT ID

    HASH            shift and go to state 3

    KotlinFile                     shift and go to state 1
    ShebangLine                    shift and go to state 2

state 1

    (0) S' -> KotlinFile .



state 2

    (1) KotlinFile -> ShebangLine . packageHeader importList topLevelObject
    (3) packageHeader -> . PACKAGE ID

    PACKAGE         shift and go to state 5

    packageHeader                  shift and go to state 4

state 3

    (2) ShebangLine -> HASH . NOT ID

    NOT             shift and go to state 6


state 4

    (1) KotlinFile -> ShebangLine packageHeader . importList topLevelObject
    (4) importList -> . importList importHeader
    (5) importList -> . importHeader
    (6) importHeader -> . IMPORT ID

    IMPORT          shift and go to state 9

    importList                     shift and go to state 7
    importHeader                   shift and go to state 8

state 5

    (3) packageHeader -> PACKAGE . ID

    ID              shift and go to state 10


state 6

    (2) ShebangLine -> HASH NOT . ID

    ID              shift and go to state 11


state 7

    (1) KotlinFile -> ShebangLine packageHeader importList . topLevelObject
    (4) importList -> importList . importHeader
    (7) topLevelObject -> . topLevelObject functionDeclaration
    (8) topLevelObject -> . functionDeclaration
    (6) importHeader -> . IMPORT ID
    (9) functionDeclaration -> . FUN ID LPAREN params RPAREN block
    (10) functionDeclaration -> . FUN ID LPAREN params RPAREN COLON type block
    (11) functionDeclaration -> . FUN ID LPAREN RPAREN COLON type block
    (12) functionDeclaration -> . FUN ID LPAREN RPAREN block

    IMPORT          shift and go to state 9
    FUN             shift and go to state 15

    topLevelObject                 shift and go to state 12
    importHeader                   shift and go to state 13
    functionDeclaration            shift and go to state 14

state 8

    (5) importList -> importHeader .

    IMPORT          reduce using rule 5 (importList -> importHeader .)
    FUN             reduce using rule 5 (importList -> importHeader .)


state 9

    (6) importHeader -> IMPORT . ID

    ID              shift and go to state 16


state 10

    (3) packageHeader -> PACKAGE ID .

    IMPORT          reduce using rule 3 (packageHeader -> PACKAGE ID .)


state 11

    (2) ShebangLine -> HASH NOT ID .

    PACKAGE         reduce using rule 2 (ShebangLine -> HASH NOT ID .)


state 12

    (1) KotlinFile -> ShebangLine packageHeader importList topLevelObject .
    (7) topLevelObject -> topLevelObject . functionDeclaration
    (9) functionDeclaration -> . FUN ID LPAREN params RPAREN block
    (10) functionDeclaration -> . FUN ID LPAREN params RPAREN COLON type block
    (11) functionDeclaration -> . FUN ID LPAREN RPAREN COLON type block
    (12) functionDeclaration -> . FUN ID LPAREN RPAREN block

    $end            reduce using rule 1 (KotlinFile -> ShebangLine packageHeader importList topLevelObject .)
    FUN             shift and go to state 15

    functionDeclaration            shift and go to state 17

state 13

    (4) importList -> importList importHeader .

    IMPORT          reduce using rule 4 (importList -> importList importHeader .)
    FUN             reduce using rule 4 (importList -> importList importHeader .)


state 14

    (8) topLevelObject -> functionDeclaration .

    FUN             reduce using rule 8 (topLevelObject -> functionDeclaration .)
    $end            reduce using rule 8 (topLevelObject -> functionDeclaration .)


state 15

    (9) functionDeclaration -> FUN . ID LPAREN params RPAREN block
    (10) functionDeclaration -> FUN . ID LPAREN params RPAREN COLON type block
    (11) functionDeclaration -> FUN . ID LPAREN RPAREN COLON type block
    (12) functionDeclaration -> FUN . ID LPAREN RPAREN block

    ID              shift and go to state 18


state 16

    (6) importHeader -> IMPORT ID .

    IMPORT          reduce using rule 6 (importHeader -> IMPORT ID .)
    FUN             reduce using rule 6 (importHeader -> IMPORT ID .)


state 17

    (7) topLevelObject -> topLevelObject functionDeclaration .

    FUN             reduce using rule 7 (topLevelObject -> topLevelObject functionDeclaration .)
    $end            reduce using rule 7 (topLevelObject -> topLevelObject functionDeclaration .)


state 18

    (9) functionDeclaration -> FUN ID . LPAREN params RPAREN block
    (10) functionDeclaration -> FUN ID . LPAREN params RPAREN COLON type block
    (11) functionDeclaration -> FUN ID . LPAREN RPAREN COLON type block
    (12) functionDeclaration -> FUN ID . LPAREN RPAREN block

    LPAREN          shift and go to state 19


state 19

    (9) functionDeclaration -> FUN ID LPAREN . params RPAREN block
    (10) functionDeclaration -> FUN ID LPAREN . params RPAREN COLON type block
    (11) functionDeclaration -> FUN ID LPAREN . RPAREN COLON type block
    (12) functionDeclaration -> FUN ID LPAREN . RPAREN block
    (13) params -> . ID COLON type
    (14) params -> . ID COLON type COMMA params

    RPAREN          shift and go to state 22
    ID              shift and go to state 20

    params                         shift and go to state 21

state 20

    (13) params -> ID . COLON type
    (14) params -> ID . COLON type COMMA params

    COLON           shift and go to state 23


state 21

    (9) functionDeclaration -> FUN ID LPAREN params . RPAREN block
    (10) functionDeclaration -> FUN ID LPAREN params . RPAREN COLON type block

    RPAREN          shift and go to state 24


state 22

    (11) functionDeclaration -> FUN ID LPAREN RPAREN . COLON type block
    (12) functionDeclaration -> FUN ID LPAREN RPAREN . block
    (19) block -> . LBRACE RBRACE
    (20) block -> . LBRACE statements RBRACE

    COLON           shift and go to state 25
    LBRACE          shift and go to state 27

    block                          shift and go to state 26

state 23

    (13) params -> ID COLON . type
    (14) params -> ID COLON . type COMMA params
    (15) type -> . TYPE_INT
    (16) type -> . TYPE_STRING
    (17) type -> . TYPE_BOOLEAN
    (18) type -> . TYPE_FLOAT

    TYPE_INT        shift and go to state 29
    TYPE_STRING     shift and go to state 30
    TYPE_BOOLEAN    shift and go to state 31
    TYPE_FLOAT      shift and go to state 32

    type                           shift and go to state 28

state 24

    (9) functionDeclaration -> FUN ID LPAREN params RPAREN . block
    (10) functionDeclaration -> FUN ID LPAREN params RPAREN . COLON type block
    (19) block -> . LBRACE RBRACE
    (20) block -> . LBRACE statements RBRACE

    COLON           shift and go to state 34
    LBRACE          shift and go to state 27

    block                          shift and go to state 33

state 25

    (11) functionDeclaration -> FUN ID LPAREN RPAREN COLON . type block
    (15) type -> . TYPE_INT
    (16) type -> . TYPE_STRING
    (17) type -> . TYPE_BOOLEAN
    (18) type -> . TYPE_FLOAT

    TYPE_INT        shift and go to state 29
    TYPE_STRING     shift and go to state 30
    TYPE_BOOLEAN    shift and go to state 31
    TYPE_FLOAT      shift and go to state 32

    type                           shift and go to state 35

state 26

    (12) functionDeclaration -> FUN ID LPAREN RPAREN block .

    FUN             reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    $end            reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    TIMES           reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    DIVIDE          reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    PLUS            reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    MINUS           reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    IN              reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    LESS            reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    GREATER         reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    LESSEQ          reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    GREATEREQ       reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    DIFFERENT       reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    AND             reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    OR              reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    RBRACE          reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    IF              reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    VAR             reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    ID              reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    FOR             reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    WHILE           reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    RETURN          reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    STRING          reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    NUMBER          reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    BOOLEAN         reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    RPAREN          reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)
    COMMA           reduce using rule 12 (functionDeclaration -> FUN ID LPAREN RPAREN block .)


state 27

    (19) block -> LBRACE . RBRACE
    (20) block -> LBRACE . statements RBRACE
    (21) statements -> . statements statement
    (22) statements -> . statement
    (23) statement -> . expression
    (24) statement -> . variableDeclaration
    (25) statement -> . variableAssignment
    (26) statement -> . IF LPAREN expression RPAREN block elseStatement
    (27) statement -> . IF LPAREN expression RPAREN block
    (29) statement -> . forLoop
    (30) statement -> . whileLoop
    (31) statement -> . returnStatement
    (32) expression -> . disjunction
    (62) variableDeclaration -> . VAR ID COLON type ASSIGN expression
    (63) variableDeclaration -> . VAR ID COLON type
    (64) variableAssignment -> . ID ASSIGN expression
    (65) variableAssignment -> . ID PLUSEQ expression
    (66) variableAssignment -> . ID MINUSEQ expression
    (67) variableAssignment -> . ID TIMESEQ expression
    (68) variableAssignment -> . ID DIVIDEEQ expression
    (69) forLoop -> . FOR LPAREN expression RPAREN block
    (70) whileLoop -> . WHILE LPAREN expression RPAREN block
    (71) returnStatement -> . RETURN expression
    (33) disjunction -> . disjunction OR conjunction
    (34) disjunction -> . conjunction
    (35) conjunction -> . conjunction AND equality
    (36) conjunction -> . equality
    (37) equality -> . equality operadoresEquality comparation
    (38) equality -> . comparation
    (40) comparation -> . comparation operadoresComparation inExpression
    (41) comparation -> . inExpression
    (46) inExpression -> . inExpression IN additive
    (47) inExpression -> . additive
    (48) additive -> . additive aditivos multiplicative
    (49) additive -> . multiplicative
    (52) multiplicative -> . multiplicative multiplicadores resto
    (53) multiplicative -> . resto
    (56) resto -> . ID
    (57) resto -> . STRING
    (58) resto -> . NUMBER
    (59) resto -> . BOOLEAN
    (60) resto -> . functionDeclaration
    (61) resto -> . functionCall
    (9) functionDeclaration -> . FUN ID LPAREN params RPAREN block
    (10) functionDeclaration -> . FUN ID LPAREN params RPAREN COLON type block
    (11) functionDeclaration -> . FUN ID LPAREN RPAREN COLON type block
    (12) functionDeclaration -> . FUN ID LPAREN RPAREN block
    (72) functionCall -> . ID LPAREN listaParametros RPAREN
    (73) functionCall -> . ID LPAREN RPAREN

    RBRACE          shift and go to state 36
    IF              shift and go to state 42
    VAR             shift and go to state 47
    ID              shift and go to state 48
    FOR             shift and go to state 49
    WHILE           shift and go to state 50
    RETURN          shift and go to state 51
    STRING          shift and go to state 59
    NUMBER          shift and go to state 60
    BOOLEAN         shift and go to state 61
    FUN             shift and go to state 15

    statements                     shift and go to state 37
    statement                      shift and go to state 38
    expression                     shift and go to state 39
    variableDeclaration            shift and go to state 40
    variableAssignment             shift and go to state 41
    forLoop                        shift and go to state 43
    whileLoop                      shift and go to state 44
    returnStatement                shift and go to state 45
    disjunction                    shift and go to state 46
    conjunction                    shift and go to state 52
    equality                       shift and go to state 53
    comparation                    shift and go to state 54
    inExpression                   shift and go to state 55
    additive                       shift and go to state 56
    multiplicative                 shift and go to state 57
    resto                          shift and go to state 58
    functionDeclaration            shift and go to state 62
    functionCall                   shift and go to state 63

state 28

    (13) params -> ID COLON type .
    (14) params -> ID COLON type . COMMA params

    RPAREN          reduce using rule 13 (params -> ID COLON type .)
    COMMA           shift and go to state 64


state 29

    (15) type -> TYPE_INT .

    COMMA           reduce using rule 15 (type -> TYPE_INT .)
    RPAREN          reduce using rule 15 (type -> TYPE_INT .)
    LBRACE          reduce using rule 15 (type -> TYPE_INT .)
    ASSIGN          reduce using rule 15 (type -> TYPE_INT .)
    RBRACE          reduce using rule 15 (type -> TYPE_INT .)
    IF              reduce using rule 15 (type -> TYPE_INT .)
    VAR             reduce using rule 15 (type -> TYPE_INT .)
    ID              reduce using rule 15 (type -> TYPE_INT .)
    FOR             reduce using rule 15 (type -> TYPE_INT .)
    WHILE           reduce using rule 15 (type -> TYPE_INT .)
    RETURN          reduce using rule 15 (type -> TYPE_INT .)
    STRING          reduce using rule 15 (type -> TYPE_INT .)
    NUMBER          reduce using rule 15 (type -> TYPE_INT .)
    BOOLEAN         reduce using rule 15 (type -> TYPE_INT .)
    FUN             reduce using rule 15 (type -> TYPE_INT .)


state 30

    (16) type -> TYPE_STRING .

    COMMA           reduce using rule 16 (type -> TYPE_STRING .)
    RPAREN          reduce using rule 16 (type -> TYPE_STRING .)
    LBRACE          reduce using rule 16 (type -> TYPE_STRING .)
    ASSIGN          reduce using rule 16 (type -> TYPE_STRING .)
    RBRACE          reduce using rule 16 (type -> TYPE_STRING .)
    IF              reduce using rule 16 (type -> TYPE_STRING .)
    VAR             reduce using rule 16 (type -> TYPE_STRING .)
    ID              reduce using rule 16 (type -> TYPE_STRING .)
    FOR             reduce using rule 16 (type -> TYPE_STRING .)
    WHILE           reduce using rule 16 (type -> TYPE_STRING .)
    RETURN          reduce using rule 16 (type -> TYPE_STRING .)
    STRING          reduce using rule 16 (type -> TYPE_STRING .)
    NUMBER          reduce using rule 16 (type -> TYPE_STRING .)
    BOOLEAN         reduce using rule 16 (type -> TYPE_STRING .)
    FUN             reduce using rule 16 (type -> TYPE_STRING .)


state 31

    (17) type -> TYPE_BOOLEAN .

    COMMA           reduce using rule 17 (type -> TYPE_BOOLEAN .)
    RPAREN          reduce using rule 17 (type -> TYPE_BOOLEAN .)
    LBRACE          reduce using rule 17 (type -> TYPE_BOOLEAN .)
    ASSIGN          reduce using rule 17 (type -> TYPE_BOOLEAN .)
    RBRACE          reduce using rule 17 (type -> TYPE_BOOLEAN .)
    IF              reduce using rule 17 (type -> TYPE_BOOLEAN .)
    VAR             reduce using rule 17 (type -> TYPE_BOOLEAN .)
    ID              reduce using rule 17 (type -> TYPE_BOOLEAN .)
    FOR             reduce using rule 17 (type -> TYPE_BOOLEAN .)
    WHILE           reduce using rule 17 (type -> TYPE_BOOLEAN .)
    RETURN          reduce using rule 17 (type -> TYPE_BOOLEAN .)
    STRING          reduce using rule 17 (type -> TYPE_BOOLEAN .)
    NUMBER          reduce using rule 17 (type -> TYPE_BOOLEAN .)
    BOOLEAN         reduce using rule 17 (type -> TYPE_BOOLEAN .)
    FUN             reduce using rule 17 (type -> TYPE_BOOLEAN .)


state 32

    (18) type -> TYPE_FLOAT .

    COMMA           reduce using rule 18 (type -> TYPE_FLOAT .)
    RPAREN          reduce using rule 18 (type -> TYPE_FLOAT .)
    LBRACE          reduce using rule 18 (type -> TYPE_FLOAT .)
    ASSIGN          reduce using rule 18 (type -> TYPE_FLOAT .)
    RBRACE          reduce using rule 18 (type -> TYPE_FLOAT .)
    IF              reduce using rule 18 (type -> TYPE_FLOAT .)
    VAR             reduce using rule 18 (type -> TYPE_FLOAT .)
    ID              reduce using rule 18 (type -> TYPE_FLOAT .)
    FOR             reduce using rule 18 (type -> TYPE_FLOAT .)
